Bug 72998 - significant custom shape import regression ...
Summary: significant custom shape import regression ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium critical
Assignee: Muthu
URL:
Whiteboard: target:4.3.0 target:4.2.0.2
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-12-23 21:34 UTC by Michael Meeks
Modified: 2020-04-11 06:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
custom shapes ... much too small ... (176.84 KB, image/png)
2013-12-23 21:35 UTC, Michael Meeks
Details
Comparison; 4.3.0.0 left, 4.1.4.2 right (175.98 KB, image/png)
2013-12-28 18:08 UTC, Jorendc
Details
4.2.0.1+(bad) v.s. 4.3.0.0+(nice) (165.72 KB, image/png)
2014-01-01 17:31 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2013-12-23 21:34:48 UTC
Seems we've really regressed very significantly on this one wrt. custom shapes.

Worked rather nicely in 4.1. This is Radek's sample file from 3.5 (?)

http://wiki.documentfoundation.org/images/b/b0/Cshape-all.pptx

It worked nicely there ... now I see the attached :-)
Comment 1 Michael Meeks 2013-12-23 21:35:35 UTC
Created attachment 91162 [details]
custom shapes ... much too small ...
Comment 2 Commit Notification 2013-12-27 14:17:35 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=beba4603ee8e603fff2599bee7f157d90872cb99

fdo#72998: Custom shapes have improper size.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2013-12-28 18:08:14 UTC
Created attachment 91261 [details]
Comparison; 4.3.0.0 left, 4.1.4.2 right

Looks fixed to me. Read: shapes are imported correctly.

See attached screenshot:

LEFT: Version: 4.3.0.0.alpha0+
Build ID: 5be7ec4193b892e5643ff5f3f2e6755319569190
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-27_23:55:02

RIGHT: Version: 4.1.4.2
Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72

The borders of the shapes in 4.3.0.0 looks tinner/less clear then those in 4.1.4.2. Not sure what's the correct behavior :) 

Kind regards and best wishes!
Joren
Comment 4 Muthu 2013-12-30 07:51:18 UTC
The lines seem to be the right size in the current version (i.e. thinner) - these seem to be the same way MSO loads them.
Comment 5 Commit Notification 2013-12-30 12:35:04 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee6eadfc617a1ce3bc2b489523ac713b99482404

fdo#72998: Add unit test case.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Muthu 2013-12-31 07:07:32 UTC
Resolving this fixed.
Comment 7 ape 2014-01-01 17:31:19 UTC
Created attachment 91391 [details]
4.2.0.1+(bad) v.s. 4.3.0.0+(nice)

The patch works well in The LibreOfficeDev-4.3.0.0.alpha0+:
Build ID: b178afc88ba97f04036e6eef9cf1ee0da987b258
TinderBox: Win-x86@39, Branch:master, Time: 2014-01-01_05:35:23

But there are no fixed in The LibreOfficeDev-4.2.0.1.0+:
Build ID: 74fcb90dc73e235934fc19d39b7d7b0bf07cc8a5
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-01-01_12:50:48

This bug reopened because of it.
Comment 8 Commit Notification 2014-01-07 08:24:29 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bec40dcd4f36bf774f6bc2d805a646ba2232175c&h=libreoffice-4-2

fdo#72998: Custom shapes have improper size.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.