fdo#72998: Custom shapes have improper size.